--- a/src/content/fr/csaw.html
+++ b/src/content/fr/csaw.html
@@ -9,14 +9,14 @@ description: The findings of this clinical trial pose a real challenge to the tr
   <div class="[ squeeze12 stack ] [ cx nmy0 g4 ]">
     <section class="[ stack ] [ g2 ]">
       <div class="[ flow1/2 ]">
-        <h1>Can Shoulder Arthroscopy Work?</h1>
-        <p class="[ fs2 ]"><em>The CSAW trial</em></p>
+        <h1>L’arthroscopie de l’épaule peut-elle fonctionner?</h1>
+        <p class="[ fs2 ]"><em>L’essai du CSAW</em></p>
       </div>
       <div class="[ cluster ] [ jb g2 fs-1 ]">
         <div class="[ image ] [ frame1:1 squeeze7 ]"><img src="/assets/img/csaw-pain.jpg" alt=""></div>
         <div class="[ flow2 ] [ pl0 bdl-1 bd-p500 ]">
-          <p>If you or someone you know is suffering from shoulder pain, making an informed decision about which treatment options to pursue can be difficult. Surgery is a frequently recommended option to treat a condition still commonly known as <em>subacromial impingement</em>.</p>
-          <p>This landmark clinical trial evaluated the effectiveness of subacromial decompression surgery, a commonly performed procedure, comparing it to a placebo (fake) surgery as well as no treatment. The findings pose a real challenge to the traditional understanding and management of subacromial shoulder pain.</p>
+          <p>Si vous ou quelqu’un que vous connaissez souffrez de douleurs à l’épaule, il peut être difficile de prendre une décision éclairée quant aux options de traitement à suivre. La chirurgie est une option fréquemment recommandée pour traiter cette condition encore communément connue sous le nom de conflit sous-acromial.</p>
+          <p>Cet essai clinique a évalué l’efficacité de la chirurgie de décompression sous-acromiale, une procédure couramment effectuée, en la comparant à une chirurgie placebo (fausse) ainsi qu’à aucun traitement. Les résultats posent un réel défi à la compréhension et à la gestion traditionnelle de la douleur sous-acromiale de l’épaule</p>
         </div>
       </div>
     </section>
@@ -24,21 +24,21 @@ description: The findings of this clinical trial pose a real challenge to the tr
     <div class="[ bdt0 bd-p200 ]"></div>
 
     <section class="[ switcher10 ] [ g2 ]">
-      <h2 class="[ h ]">Inclusion and exclusion criteria</h2>
+      <h2 class="[ h ]">Critères d'inclusion et d'exclusion</h2>
       <div class="[ flow3/2 squeezebody ] [ ]">
-        <h3>Who was <span class="[ bdb-1 bd-n900 ]">included</span>?</h3>
+        <h3>Qui a été <span class="[ bdb-1 bd-n900 ]">inclus</span>?</h3>
         <ul class="[ list-bullet ] [ flow1/2 ]">
-          <li>Subacromial pain for 3+ months</li>
-          <li>Intact rotator cuff tendons</li>
-          <li>Eligible for arthroscopic surgery</li>
-          <li>Completed a nonoperative program consisting of exercise and 1+ injection</li>
+          <li>Douleur sous-acromiale depuis 3 mois et plus</li>
+          <li>Tendons intacts de la coiffe des rotateurs</li>
+          <li>Admissible à la chirurgie arthroscopique</li>
+          <li>Terminer un programme non chirurgical comprenant des exercices et 1+ injection</li>
         </ul>
       </div>
       <div class="[ flow3/2 squeezebody ] [ ]">
-        <h3>Who was <span class="[ bdb-1 bd-n900 ]">excluded</span>?</h3>
+        <h3>Qui a été <span class="[ bdb-1 bd-n900 ]">exclu</span>?</h3>
         <ul class="[ list-bullet ] [ flow1/2 ]">
-          <li>Full thickness rotator cuff tears</li>
-          <li>Partial thickness tears were recorded but not excluded</li>
+          <li>Déchirures complètes de la coiffe des rotateurs</li>
+          <li>Des déchirures d’épaisseur partielle ont été enregistrées mais non exclues</li>
         </ul>
       </div>
     </section>
@@ -113,10 +113,10 @@ description: The findings of this clinical trial pose a real challenge to the tr
     <div class="[ bdt0 bd-p200 ]"></div>
 
     <section class="[ flow2 squeezebody ] [ cx ]">
-      <h2 class="[ tc fs4 ]">Decompression is no better than sham.</h2>
+      <h2 class="[ tc fs4 ]">La décompression n’est pas mieux que la chirurgie placebo.</h2>
       <div class="[ image ]"><img src="/assets/img/csaw-results-custom.png" alt=""></div>
-      <p>Both surgical groups improved their Oxford Shoulder Score* compared to those who underwent no treatment, but decompression did <strong>not</strong> outperform arthroscopy.</p>
-      <p class="[ fs-2 ]"><i>* The Oxford Shoulder Score is a 48-point questionnaire that measures shoulder function.</i></p>
+      <p>Les deux groupes chirurgicaux ont amélioré leur Oxford Shoulder Score* comparativement à ceux qui n’ont subi aucun traitement, mais la décompression <strong>n’a pas surpassé</strong> l’arthroscopie.</p>
+      <p class="[ fs-2 ]"><i>* L’Oxford Shoulder Score est un questionnaire de 48 points qui mesure la fonction de l’épaule</i></p>
     </section>
 
     <div class="[ bdt0 bd-p200 ]"></div>
@@ -125,17 +125,17 @@ description: The findings of this clinical trial pose a real challenge to the tr
       <div class="[ main50% stack ]">
         <h2 class="[ h ]">Implications</h2>
         <div class="[ flow1 ] [ p2 bg-n700 fc-n200 ]">
-          <h3>One interpretation</h3>
-          <p>Both decompression as well as arthroscopy are effective and could be considered as treatment strategies for subacromial pain.</p>
+          <h3>Une interprétation</h3>
+          <p>La décompression et l’arthroscopie sont efficaces et pourraient être considérées comme des stratégies de traitement de la douleur sous-acromiale.</p>
         </div>
         <div class="[ flow1 ] [ p2 bg-n900 fc-p100 ]">
-          <h3>More likely</h3>
-          <p>Surgery, although <em>statistically</em> better than no treatment, doesn't provide subacromial pain patients with a <em>clinically</em> meaningful benefit.</p>
+          <h3>Plus probable</h3>
+          <p>La chirurgie, bien que <em>statistiquement</em> meilleure que l’absence de traitement, ne procure pas aux patients souffrant de douleurs sous-acromiales un avantage <em>cliniquement</em> significatif.</p>
         </div>
       </div>
       <div class="[ flow2 side7 ] [ pl0 bdl-1 bd-p500 fs-1 ]">
-      <p><strong>Shoulder pain patients:</strong><br>Bring this study up with your trusted health professional. Ask them about the risks, benefits, and evidence behind your different treatment options. Collaborate to make an informed decision that's right for you.</p>
-      <p><strong>Health professionals:</strong><br>Invasive therapies can be powerful, but the validity of established procedures should not be taken for granted. Talk with your patients about the evidence regarding surgery for their condition. Collaborate to make an informed decision that's right for them.</p>
+      <p><strong>Patients avec une douleur à l’épaule:</strong><br>Discutez de cette étude avec votre professionnel de la santé de confiance. Demandez-lui quels sont les risques, les avantages et les données probantes qui sous-tendent vos différentes options de traitement. Collaborez pour prendre une décision éclairée qui vous convient.</p>
+      <p><strong>Professionnels de la santé:</strong><br>Les thérapies invasives peuvent être puissantes, mais la validité des procédures établies ne doit pas être tenue pour acquise. Discutez avec vos patients des données probantes concernant la chirurgie pour leur état. Collaborez pour prendre une décision éclairée qui leur convient.</p>
     </div>
     </section>
 
