--- a/src/content/en/csaw.html
+++ b/src/content/en/csaw.html
@@ -1,4 +1,5 @@
 ---
+translationKey: csaw
 title: The CSAW trial
 permalink: /{{ locale }}/csaw/
 description: The findings of this clinical trial pose a real challenge to the traditional understanding and management of subacromial shoulder pain.
@@ -114,8 +115,8 @@ description: The findings of this clinical trial pose a real challenge to the tr
 
     <section class="[ flow2 squeezebody ] [ cx ]">
       <h2 class="[ tc fs4 ]">Decompression is no better than sham.</h2>
-      <div class="[ image ]"><img src="/assets/img/csaw-results-custom.png" alt=""></div>
-      <p>Both surgical groups improved their Oxford Shoulder Score* compared to those who underwent no treatment, but decompression did <strong>not</strong> outperform arthroscopy.</p>
+      <div class="[ image ]"><img src="/assets/img/csaw-results-en.png" alt=""></div>
+      <p>Both surgical groups improved their Oxford Shoulder Score* compared to those who underwent no treatment, but decompression <strong>did not outperform</strong> arthroscopy.</p>
       <p class="[ fs-2 ]"><i>* The Oxford Shoulder Score is a 48-point questionnaire that measures shoulder function.</i></p>
     </section>
 
@@ -141,18 +142,13 @@ description: The findings of this clinical trial pose a real challenge to the tr
 
     <div class="[ bdt0 bd-p200 ]"></div>
 
-    <div class="[ cluster ] [ jb gx4 gy2 ]">
+    <div class="[ cluster ] [ ie jb gx4 gy2 ]">
       <div class="[ flow2 ] [ fs-1 ]">
         <h2>References</h2>
         <p>Beard DJ, Rees JL, Cook JA, et al. Arthroscopic subacromial decompression for subacromial shoulder pain (CSAW): a multicentre, pragmatic, parallel group, placebo-controlled, three-group, randomised surgical trial. Lancet. 2018;391(10118):329-338.</p>
+        <p class="[ fs0 ]"><a href="/{{ locale }}/">🡨 Back home</a></p>
       </div>
-      <div class="[ squeeze6 stack ] [ g-1 fs-2 ]">
-        <div class="[ image ]"><img src="/assets/img/ceu-logo.jpg" alt=""></div>
-        <div class="[ flow1/3 ]">
-          <p><i>Made by Frederik Kehlet for Research in the Health Sciences, a 6th semester physiotherapy class</i></p>
-        </div>
-        <p><a href="/en/">Go back home</a></p>
-      </div>
+      {% include 'partials/translations.html' %}
     </div>
   </div>
 </main>
