--- a/src/content/fr/csaw.html
+++ b/src/content/fr/csaw.html
@@ -1,7 +1,8 @@
 ---
-title: The CSAW trial
+translationKey: csaw
+title: L’essai du CSAW
 permalink: /{{ locale }}/csaw/
-description: The findings of this clinical trial pose a real challenge to the traditional understanding and management of subacromial shoulder pain.
+description: Les résultats posent un réel défi à la compréhension et à la gestion traditionnelle de la douleur sous-acromiale de l’épaule.
 ---
 {% extends "base.html" %}
 {% block body %}
@@ -16,7 +17,7 @@ description: The findings of this clinical trial pose a real challenge to the tr
         <div class="[ image ] [ frame1:1 squeeze7 ]"><img src="/assets/img/csaw-pain.jpg" alt=""></div>
         <div class="[ flow2 ] [ pl0 bdl-1 bd-p500 ]">
           <p>Si vous ou quelqu’un que vous connaissez souffrez de douleurs à l’épaule, il peut être difficile de prendre une décision éclairée quant aux options de traitement à suivre. La chirurgie est une option fréquemment recommandée pour traiter cette condition encore communément connue sous le nom de conflit sous-acromial.</p>
-          <p>Cet essai clinique a évalué l’efficacité de la chirurgie de décompression sous-acromiale, une procédure couramment effectuée, en la comparant à une chirurgie placebo (fausse) ainsi qu’à aucun traitement. Les résultats posent un réel défi à la compréhension et à la gestion traditionnelle de la douleur sous-acromiale de l’épaule</p>
+          <p>Cet essai clinique a évalué l’efficacité de la chirurgie de décompression sous-acromiale, une procédure couramment effectuée, en la comparant à une chirurgie placebo (fausse) ainsi qu’à aucun traitement. Les résultats posent un réel défi à la compréhension et à la gestion traditionnelle de la douleur sous-acromiale de l’épaule.</p>
         </div>
       </div>
     </section>
@@ -47,14 +48,14 @@ description: The findings of this clinical trial pose a real challenge to the tr
 
     <section class="[ stack ] [ tc g0 fc-p100 ]">
       <div class="[ squeeze9 ] [ cx px2 py0 bg-n900 ]">
-        <p class="[ fs4 fw700 ]">313 subjects</p>
+        <p class="[ fs4 fw700 ]">313 sujets</p>
       </div>
       <div class="[ cluster ] [ ic jc g0 fc-p300 fs0 ]">
-        <p class="[ squeeze6 ] [ e te ]">Split evenly</p>
+        <p class="[ squeeze6 ] [ e te ]">répartis équitablement</p>
         <div class="[ stack ] [ ic ]">
           <div class="[ sc py2 bdl-1 bd-p300 bg-p300 ]"></div>
         </div>
-        <p class="[ squeeze6 ] [ e ts ]">into 3 groups</p>
+        <p class="[ squeeze6 ] [ e ts ]">en 3 groupes</p>
       </div>
       <div class="[ switcher11 ] [ g0 ]">
         <div class="[ stack ] [ ]">
@@ -64,10 +65,10 @@ description: The findings of this clinical trial pose a real challenge to the tr
           </div>
           <div class="[ switcher6 ]">
             <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
-              <p><strong class="[ fs0 ]">53</strong><br>Age</p>
+              <p><strong class="[ fs0 ]">53</strong><br>Âge</p>
             </div>
             <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
-              <p><strong class="[ fs0 ]">51%</strong><br>Female</p>
+              <p><strong class="[ fs0 ]">51%</strong><br>Femmes</p>
             </div>
           </div>
         </div>
@@ -78,10 +79,10 @@ description: The findings of this clinical trial pose a real challenge to the tr
           </div>
           <div class="[ switcher6 ]">
             <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
-              <p><strong class="[ fs0 ]">54</strong><br>Age</p>
+              <p><strong class="[ fs0 ]">54</strong><br>Âge</p>
             </div>
             <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
-              <p><strong class="[ fs0 ]">50%</strong><br>Female</p>
+              <p><strong class="[ fs0 ]">50%</strong><br>Femmes</p>
             </div>
           </div>
         </div>
@@ -92,20 +93,20 @@ description: The findings of this clinical trial pose a real challenge to the tr
           </div>
           <div class="[ switcher6 ]">
             <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
-              <p><strong class="[ fs0 ]">53</strong><br>Age</p>
+              <p><strong class="[ fs0 ]">53</strong><br>Âge</p>
             </div>
             <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
-              <p><strong class="[ fs0 ]">50%</strong><br>Female</p>
+              <p><strong class="[ fs0 ]">50%</strong><br>Femmes</p>
             </div>
           </div>
         </div>
       </div>
       <div class="[ switcher10 ] [ gx0 gy-3 ]">
         <div class="[ pt2 fc-n900 fs3 ]">
-          Operated at<br><strong>30 sites</strong>
+          Opérée à 30<br><strong>30 situé</strong>
         </div>
         <div class="[ pt2 fc-n900 fs3 ]">
-          Treated by<br><strong>38 surgeons</strong>
+          Traitée par<br><strong>38 chirurgiens</strong>
         </div>
       </div>
     </section>
@@ -114,7 +115,7 @@ description: The findings of this clinical trial pose a real challenge to the tr
 
     <section class="[ flow2 squeezebody ] [ cx ]">
       <h2 class="[ tc fs4 ]">La décompression n’est pas mieux que la chirurgie placebo.</h2>
-      <div class="[ image ]"><img src="/assets/img/csaw-results-custom.png" alt=""></div>
+      <div class="[ image ]"><img src="/assets/img/csaw-results-fr.png" alt=""></div>
       <p>Les deux groupes chirurgicaux ont amélioré leur Oxford Shoulder Score* comparativement à ceux qui n’ont subi aucun traitement, mais la décompression <strong>n’a pas surpassé</strong> l’arthroscopie.</p>
       <p class="[ fs-2 ]"><i>* L’Oxford Shoulder Score est un questionnaire de 48 points qui mesure la fonction de l’épaule</i></p>
     </section>
@@ -141,18 +142,13 @@ description: The findings of this clinical trial pose a real challenge to the tr
 
     <div class="[ bdt0 bd-p200 ]"></div>
 
-    <div class="[ cluster ] [ jb gx4 gy2 ]">
+    <div class="[ cluster ] [ ie jb gx4 gy2 ]">
       <div class="[ flow2 ] [ fs-1 ]">
-        <h2>References</h2>
+        <h2>Références</h2>
         <p>Beard DJ, Rees JL, Cook JA, et al. Arthroscopic subacromial decompression for subacromial shoulder pain (CSAW): a multicentre, pragmatic, parallel group, placebo-controlled, three-group, randomised surgical trial. Lancet. 2018;391(10118):329-338.</p>
+        <p class="[ fs0 ]"><a href="/{{ locale }}/">🡨 Retour au départ</a></p>
       </div>
-      <div class="[ squeeze6 stack ] [ g-1 fs-2 ]">
-        <div class="[ image ]"><img src="/assets/img/ceu-logo.jpg" alt=""></div>
-        <div class="[ flow1/3 ]">
-          <p><i>Made by Frederik Kehlet for Research in the Health Sciences, a 6th semester physiotherapy class</i></p>
-        </div>
-        <p><a href="/en/">Go back home</a></p>
-      </div>
+      {% include 'partials/translations.html' %}
     </div>
   </div>
 </main>
