--- a/src/content/fr/home.html
+++ b/src/content/fr/home.html
@@ -1,7 +1,7 @@
 ---
 translationKey: home
+permalink: /{{ locale }}/
 title: La révolution de la douleur est arrivée.
-permalink: /fr/
 description: La révolution de la douleur est arrivée. Notre mission est de développer des ressources qualitatives d’éducation et de réadaptation de la douleur pour les cliniciens, les patients et le grand public.
 ---
 {% extends 'base.html' %}
@@ -10,6 +10,13 @@ description: La révolution de la douleur est arrivée. Notre mission est de dé
 <main>
   <div class="[ squeeze12 stack ] [ cx g4 ]">
     {% include 'partials/homeIntro.html' %}
+    <section class="[ flow2 ]">
+      <h2 class="[ h-fancy ]">Projets</h2>
+      <div class="[ flow1/3 ]">
+        <h3>CSAW</h3>
+        <p><a href="/{{ locale }}/csaw/">Cliquez ici</a> pour consulter un résumé graphique de l'essai chirurgical de référence CSAW sur la douleur sous-acromiale de l'épaule.</p>
+      </div>
+    </section>
   </div>
 </main>
 {% include 'partials/footer.html' %}
