--- a/src/content/fr/csaw.html
+++ b/src/content/fr/csaw.html
@@ -60,8 +60,8 @@ description: Les résultats posent un réel défi à la compréhension et à la 
       <div class="[ switcher11 ] [ g0 ]">
         <div class="[ stack ] [ ]">
           <div class="[ flow1/2 stack ] [ ic py0 bg-p500 ]">
-            <h3 class="[ fs1 ]">Decompression</h3>
-            <p>Real surgery</p>
+            <h3 class="[ fs1 ]">Décompression</h3>
+            <p>Chirurgie réelle</p>
           </div>
           <div class="[ switcher6 ]">
             <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
@@ -74,8 +74,8 @@ description: Les résultats posent un réel défi à la compréhension et à la 
         </div>
         <div class="[ stack ] [ ]">
           <div class="[ flow1/2 stack ] [ ic py0 bg-p500 ]">
-            <h3 class="[ fs1 ]">Arthroscopy</h3>
-            <p>Placebo surgery</p>
+            <h3 class="[ fs1 ]">Arthroscopie</h3>
+            <p>Chirurgie placebo</p>
           </div>
           <div class="[ switcher6 ]">
             <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
@@ -88,8 +88,8 @@ description: Les résultats posent un réel défi à la compréhension et à la 
         </div>
         <div class="[ stack ] [ ]">
           <div class="[ flow1/2 stack ] [ ic py0 bg-p500 ]">
-            <h3 class="[ fs1 ]">No treatment</h3>
-            <p>Control group</p>
+            <h3 class="[ fs1 ]">Aucun traitement</h3>
+            <p>Groupe de contrôle</p>
           </div>
           <div class="[ switcher6 ]">
             <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
