--- a/src/content/en/csaw.html
+++ b/src/content/en/csaw.html
@@ -4,13 +4,13 @@ title: The CSAW trial
 permalink: /{{ locale }}/csaw/
 description: The findings of this clinical trial pose a real challenge to the traditional understanding and management of subacromial shoulder pain.
 ---
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% block body %}
 <main class="[ bg-p100 ]">
   <div class="[ squeeze12 stack ] [ cx nmy0 g4 ]">
     <section class="[ stack ] [ g2 ]">
       <div class="[ flow1/2 ]">
-        <h1>Can Shoulder Arthroscopy Work?</h1>
+        <h1>Can shoulder arthroscopy work?</h1>
         <p class="[ fs2 ]"><em>The CSAW trial</em></p>
       </div>
       <div class="[ cluster ] [ jb g2 fs-1 ]">
