--- a/src/content/fr/csaw.html
+++ b/src/content/fr/csaw.html
@@ -4,7 +4,7 @@ title: L’essai du CSAW
 permalink: /{{ locale }}/csaw/
 description: Les résultats posent un réel défi à la compréhension et à la gestion traditionnelle de la douleur sous-acromiale de l’épaule.
 ---
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% block body %}
 <main class="[ bg-p100 ]">
   <div class="[ squeeze12 stack ] [ cx nmy0 g4 ]">
