--- a/src/content/da/csaw.html
+++ b/src/content/da/csaw.html
@@ -16,7 +16,7 @@ description: Resultaterne af dette kliniske forsøg udgør en reel udfordring fo
       <div class="[ cluster ] [ jb g2 fs-1 ]">
         <div class="[ image ] [ frame1:1 squeeze7 ]"><img src="/assets/img/csaw-pain.jpg" alt=""></div>
         <div class="[ flow2 ] [ pl0 bdl-1 bd-p500 ]">
-          <p>Hvis du eller en du kender lider af skuldersmerte, kan det være svært at træffe en informeret beslutning om, hvilke behandlingsmuligheder at forfølge. Kirurgi er en hyppigt anbefalet mulighed for at behandle en tilstand, stadig almindeligt kendt som <em>subacromial indklemning (impingement)</em>.</p>
+          <p>Hvis du eller en du kender lider af skuldersmerte, kan det være svært at træffe en informeret beslutning om, hvilke behandlingsmuligheder at forfølge. Kirurgi er en ofte anbefalet mulighed for at behandle en tilstand, stadig almindeligt kendt som <em>subacromial indklemning (impingement)</em>.</p>
           <p>Dette skelsættende kliniske forsøg evaluerede effektiviteten af subacromial dekompression, en hyppigt udført operation, vad at sammenligne den med en placebo (falsk) operation samt ingen behandling. Resultaterne udgør en reel udfordring for den traditionelle forståelse og behandling af subacromial skuldersmerte.</p>
         </div>
       </div>
