--- a/src/content/da/csaw.html
+++ b/src/content/da/csaw.html
@@ -2,7 +2,7 @@
 translationKey: csaw
 title: CSAW-forsøget
 permalink: /{{ locale }}/csaw/
-description: Resultaterne af dette kliniske forsøg udgør en reel udfordring for den traditionelle forståelse og behandling af subacromial skuldersmerte.
+description: Resultaterne af dette klinisk forsøg udgør en reel udfordring for den traditionelle forståelse og behandling af subacromial skuldersmerte.
 ---
 {% extends 'base.html' %}
 {% block body %}
@@ -39,7 +39,7 @@ description: Resultaterne af dette kliniske forsøg udgør en reel udfordring fo
         <h3>Hvem blev <span class="[ bdb-1 bd-n900 ]">ekskluderet</span>?</h3>
         <ul class="[ list-bullet ] [ flow1/2 ]">
           <li>Komplet rivning af rotator cuff</li>
-          <li>Delvise rivninger blev registreret, men ikke udelukket</li>
+          <li>Ukomplete rivninger blev registreret, men ikke udelukket</li>
         </ul>
       </div>
     </section>
@@ -131,12 +131,12 @@ description: Resultaterne af dette kliniske forsøg udgør en reel udfordring fo
         </div>
         <div class="[ flow1 ] [ p2 bg-n900 fc-p100 ]">
           <h3>Mere sandsynligt</h3>
-          <p>Kirurgi, selv om det <em>statistisk</em> set er bedre end ingen behandling, giver ikke subacromial smertepatienter en <em>klinisk</em> meningsfuld fordel.</p>
+          <p>Kirurgi, selv om det <em>statistisk</em> set er bedre end ingen behandling, giver ikke patienter med subacromial smerte en <em>klinisk</em> meningsfuld fordel.</p>
         </div>
       </div>
       <div class="[ flow2 side7 ] [ pl0 bdl-1 bd-p500 fs-1 ]">
       <p><strong>Patienter med skuldersmerte:</strong><br>Tag dette forsøg op med din betroet sundhedsprofessionel. Spørg dem om risici, fordele og evidensen bag dine forskellige behandlingsmuligheder. Arbejd sammen for at træffe en informeret beslutning, der er rigtig for dig.</p>
-      <p><strong>Sundhedsprofessionelle:</strong><br>Invasive terapier kan være effektive, men vi bør ikke tage gyldigheden af etablerede procedurer for givet. Tal med dine patienter om evidensen vedrørende kirurgi i forbindelse med deres tilstand. Arbejd sammen for at træffe en informeret beslutning, der er rigtig for dem.</p>
+      <p><strong>Sundhedsprofessionelle:</strong><br>Invasive terapier kan være effektive, men gyldigheden af etablerede procedurer bør ikke tages for givet. Tal med dine patienter om evidensen vedrørende kirurgi i forbindelse med deres tilstand. Arbejd sammen for at træffe en informeret beslutning, der er rigtig for dem.</p>
     </div>
     </section>
 
