--- a/src/content/da/home.html
+++ b/src/content/da/home.html
@@ -10,6 +10,13 @@ description: Smerterevolutionen er ankommet. Vores mission er at udvikle resourc
 <main>
   <div class="[ squeeze12 stack ] [ cx g4 ]">
     {% include 'partials/homeIntro.html' %}
+    <section class="[ flow2 ]">
+      <h2 class="[ h-fancy ]">Projekter</h2>
+      <div class="[ flow1/3 ]">
+        <h3>CSAW</h3>
+        <p>Resultaterne af dette klinisk forsøg udgør en reel udfordring for den traditionelle forståelse og behandling af subacromial skuldersmerte. <a href="/{{ locale }}/csaw/">Læs mere</a></p>
+      </div>
+    </section>
   </div>
 </main>
 {% include 'partials/footer.html' %}
