--- a/src/content/en/csaw.html
+++ b/src/content/en/csaw.html
@@ -38,7 +38,7 @@ description: The findings of this clinical trial pose a real challenge to the tr
       <div class="[ flow3/2 squeezebody ] [ ]">
         <h3>Who was <span class="[ bdb-1 bd-n900 ]">excluded</span>?</h3>
         <ul class="[ list-bullet ] [ flow1/2 ]">
-          <li>Full thickness rotator cuff tears</li>
+          <li>Full thickness rotator cuff tear</li>
           <li>Partial thickness tears were recorded but not excluded</li>
         </ul>
       </div>
