--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -49,7 +49,7 @@ description: The pain revolution is here. Our mission is to develop high-quality
       <h2 class="[ h-fancy ]">Projects</h2>
       <div class="[ flow1/3 ]">
         <h3>CSAW</h3>
-        <p><a href="/en/csaw/">Click here</a> to view a graphical summary of the landmark CSAW surgical trial for subacromial shoulder pain.</p>
+        <p>The findings of this clinical trial pose a real challenge to the traditional understanding and management of subacromial shoulder pain. <a href="/{{ locale }}/csaw/">Read more</a></p>
       </div>
       <div class="[ flow1/3 ]">
         <h3>Journal club</h3>
