--- a/src/content/es/forms/omsq.html
+++ b/src/content/es/forms/omsq.html
@@ -131,7 +131,7 @@ title: ÖMSQ-12
             </div>
           </li>
           <li class="stack g-1">
-            <p>¿Qué riesgo crees que conlleva que tu dolor o problema <span class="[ u ]">no</span> mejore?<br><em class="fs-1">0 = ningún riesgo, 10 = gran riesgo</em></p>
+            <p>¿Qué riesgo crees que conlleva que tu dolor o problema <u>no</u> mejore?<br><em class="fs-1">0 = ningún riesgo, 10 = gran riesgo</em></p>
             <div class="grid1 gy-1">
               <label class="[ stack ic ] [ fs-1 ]"><input required name="q7" type="radio" value="0">0</label>
               <label class="[ stack ic ] [ fs-1 ]"><input required name="q7" type="radio" value="1">1</label>
@@ -215,7 +215,7 @@ title: ÖMSQ-12
         <legend>Ayúdanos a conocer mejor tus capacidades físicas.</legend>
         <ol class="stack g3" start="11">
           <li class="stack g-1">
-            <p>Puedo andar durante 1 hora o realizar mis actividades deportivas/recreativas <span class="[ u ]">ligeras</span>.<br><em class="fs-1">0 = para nada, 10 = completamente normal</em></p>
+            <p>Puedo andar durante 1 hora o realizar mis actividades deportivas/recreativas <u>ligeras</u>.<br><em class="fs-1">0 = para nada, 10 = completamente normal</em></p>
             <div class="grid1 gy-1">
               <label class="[ stack ic ] [ fs-1 ]"><input required name="q11" type="radio" value="0">0</label>
               <label class="[ stack ic ] [ fs-1 ]"><input required name="q11" type="radio" value="1">1</label>
