--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -1,7 +1,7 @@
 ---
 translationKey: home
-title: La revolución del dolor ha llegado.
 permalink: /es/
+title: La revolución del dolor ha llegado.
 description: La revolución del dolor ha llegado. Nuestra misión es desarrollar recursos de educación y rehabilitación de dolor de alta calidad para clínicos, pacientes y el público en general.
 ---
 {% extends 'base.html' %}
@@ -34,6 +34,10 @@ description: La revolución del dolor ha llegado. Nuestra misión es desarrollar
     </div>
     <section class="[ flow2 ]">
       <h2 class="[ h-fancy ]">Proyectos</h2>
+      <div class="[ flow1/3 ]">
+        <h3>CSAW</h3>
+        <p>Los hallazgos plantean un verdadero desafío a la comprensión y el tratamiento tradicionales del dolor subacromial de hombro. <a href="/{{ locale }}/csaw/">Leer más</a></p>
+      </div>
       <div class="[ flow1/3 ]">
         <h3>Club de investigación</h3>
         <p><a href="/es/club/">Haz clic aquí</a> para ver información sobre el club de investigación de la Facultad de Medicina de USP CEU.</p>
