--- a/src/content/fr/csaw.html
+++ b/src/content/fr/csaw.html
@@ -29,7 +29,7 @@ description: Les résultats posent un réel défi à la compréhension et à la 
       <div class="[ flow3/2 squeezebody ] [ ]">
         <h3>Qui a été <span class="[ bdb-1 bd-n900 ]">inclus</span>?</h3>
         <ul class="[ list-bullet ] [ flow1/2 ]">
-          <li>Douleur sous-acromiale depuis 3 mois et plus</li>
+          <li>Douleur sous-acromiale depuis 3+ mois</li>
           <li>Tendons intacts de la coiffe des rotateurs</li>
           <li>Admissible à la chirurgie arthroscopique</li>
           <li>Terminer un programme non chirurgical comprenant des exercices et 1+ injection</li>
@@ -38,7 +38,7 @@ description: Les résultats posent un réel défi à la compréhension et à la 
       <div class="[ flow3/2 squeezebody ] [ ]">
         <h3>Qui a été <span class="[ bdb-1 bd-n900 ]">exclu</span>?</h3>
         <ul class="[ list-bullet ] [ flow1/2 ]">
-          <li>Déchirures complètes de la coiffe des rotateurs</li>
+          <li>Déchirure complète de la coiffe des rotateurs</li>
           <li>Des déchirures d’épaisseur partielle ont été enregistrées mais non exclues</li>
         </ul>
       </div>
@@ -51,7 +51,7 @@ description: Les résultats posent un réel défi à la compréhension et à la 
         <p class="[ fs4 fw700 ]">313 sujets</p>
       </div>
       <div class="[ cluster ] [ ic jc g0 fc-p300 fs0 ]">
-        <p class="[ squeeze6 ] [ e te ]">répartis équitablement</p>
+        <p class="[ squeeze6 ] [ e te ]">Répartis équitablement</p>
         <div class="[ stack ] [ ic ]">
           <div class="[ sc py2 bdl-1 bd-p300 bg-p300 ]"></div>
         </div>
@@ -103,10 +103,10 @@ description: Les résultats posent un réel défi à la compréhension et à la 
       </div>
       <div class="[ switcher10 ] [ gx0 gy-3 ]">
         <div class="[ pt2 fc-n900 fs3 ]">
-          Opérée à 30<br><strong>30 situé</strong>
+          Opérés sur<br><strong>30 sites</strong>
         </div>
         <div class="[ pt2 fc-n900 fs3 ]">
-          Traitée par<br><strong>38 chirurgiens</strong>
+          Traités par<br><strong>38 chirurgiens</strong>
         </div>
       </div>
     </section>
