--- a/src/content/es/csaw.html
+++ b/src/content/es/csaw.html
@@ -144,9 +144,9 @@ description: Los hallazgos plantean un verdadero desafío a la comprensión y el
 
     <div class="[ cluster ] [ ie jb gx4 gy2 ]">
       <div class="[ flow2 ] [ fs-1 ]">
-        <h2>References</h2>
+        <h2>Referencias</h2>
         <p>Beard DJ, Rees JL, Cook JA, et al. Arthroscopic subacromial decompression for subacromial shoulder pain (CSAW): a multicentre, pragmatic, parallel group, placebo-controlled, three-group, randomised surgical trial. Lancet. 2018;391(10118):329-338.</p>
-        <p class="[ fs0 ]"><a href="/{{ locale }}/">🡨 Back home</a></p>
+        <p class="[ fs0 ]"><a href="/{{ locale }}/">🡨 Volver al inicio</a></p>
       </div>
       {% include 'partials/translations.html' %}
     </div>
