--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -13,7 +13,7 @@ description: La revolución del dolor ha llegado. Nuestra misión es desarrollar
     <div class="[ switcher11 ] [ g3 ]">
       {% set posts = collections[locale + '_articles'] %}
       <section class="[ flow2 ]">
-        <h2 class="[ h-fancy ]">Para clínic@s</h2>
+        <h2 class="[ h-fancy ]">Para clínicos</h2>
         <div class="[ flow1/3 ]">
           <h3>Entradas</h3>
           <ul class="[ flow1/3 ]">
