--- a/src/content/da/csaw.html
+++ b/src/content/da/csaw.html
@@ -38,8 +38,8 @@ description: Resultaterne af dette klinisk forsøg udgør en reel udfordring for
       <div class="[ flow3/2 squeezebody ] [ ]">
         <h3>Hvem blev <span class="[ bdb-1 bd-n900 ]">ekskluderet</span>?</h3>
         <ul class="[ list-bullet ] [ flow1/2 ]">
-          <li>Komplet rivning af rotator cuff</li>
-          <li>Ukomplete rivninger blev registreret, men ikke udelukket</li>
+          <li>Komplet revne af rotatormanchetten</li>
+          <li>Ukomplette revner blev registreret, men ikke udelukket</li>
         </ul>
       </div>
     </section>
