Start work on exercise database

--- a/src/content/es/csaw.html
+++ b/src/content/es/csaw.html
@@ -2,7 +2,7 @@
 translationKey: csaw
 title: El ensayo CSAW
 permalink: /{{ locale }}/csaw/
-description: Los hallazgos plantean un verdadero desafío a la comprensión y el tratamiento tradicionales del dolor subacromial de hombro.
+description: Los hallazgos de este ensayo clínico plantean un verdadero desafío a la comprensión y el tratamiento tradicionales del dolor subacromial de hombro.
 ---
 {% extends 'base.html' %}
 {% block body %}
