--- a/src/content/fr/csaw.html
+++ b/src/content/fr/csaw.html
@@ -2,7 +2,7 @@
 translationKey: csaw
 title: L’essai du CSAW
 permalink: /{{ locale }}/csaw/
-description: Les résultats posent un réel défi à la compréhension et à la gestion traditionnelle de la douleur sous-acromiale de l’épaule.
+description: Les résultats de cet essai clinique posent un réel défi à la compréhension et à la gestion traditionnelle de la douleur sous-acromiale de l’épaule.
 ---
 {% extends 'base.html' %}
 {% block body %}
