--- a/src/content/fr/home.html
+++ b/src/content/fr/home.html
@@ -14,7 +14,7 @@ description: La révolution de la douleur est arrivée. Notre mission est de dé
       <h2 class="[ h-fancy ]">Projets</h2>
       <div class="[ flow1/3 ]">
         <h3>CSAW</h3>
-        <p>Les résultats posent un réel défi à la compréhension et à la gestion traditionnelle de la douleur sous-acromiale de l’épaule. <a href="/{{ locale }}/csaw/">En savoir plus</a></p>
+        <p>Les résultats de cet essai clinique posent un réel défi à la compréhension et à la gestion traditionnelle de la douleur sous-acromiale de l’épaule. <a href="/{{ locale }}/csaw/">En savoir plus</a></p>
       </div>
     </section>
   </div>
