--- a/src/content/en/exercises.html
+++ b/src/content/en/exercises.html
@@ -1,29 +1,40 @@
 ---
 translationKey: exercises
 title: Exercises
-permalink: /en/exercises/
-description: ...
+permalink: /{{ locale }}/exercises/
+description: This is the BEVAE exercise database.
 ---
 {% extends 'base.html' %}
-{% block head %}
-<link rel="preload" href="/assets/img/profile_me-res.jpg" as="image">
-{% endblock %}
 {% block body %}
 {% include 'partials/header.html' %}
 <main>
   <div class="[ squeeze12 flow1 ] [ cx ]">
-    <h1>Romanian deadlift</h1>
-    <div class="[ box squeezebody ] [ py6 ]"></div>
-    <h2>How to perform</h2>
-    <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim labore culpa sint ad nisi Lorem pariatur mollit ex esse exercitation amet. Nisi anim cupidatat excepteur officia.</p>
-    <p>Nostrud officia pariatur ut officia. Sit irure elit esse ea nulla sunt ex occaecat reprehenderit commodo officia dolor Lorem duis laboris cupidatat officia voluptate.</p>
-    <h2>Helpful tips</h2>
-    <ul class="[ list-bullet ]">
-      <li>Think about touching the wall behind you with your butt</li>
-    </ul>
-    <p>Gliding discs (decathlon)</p>
-    <p>Theraband</p>
-    <p>Dumbbells</p>
+    <h1>Exercises</h1>
+    <div class="[ grid8 ] [ gx3 gy4 ]">
+      {% set exercises = collections[locale + '_exercises'] %}
+      {% for category in site.exerciseCategories %}
+      <div class="[ flow2 ]">
+        <h2 class="[ h-fancy ]">{{ exercise.name }}</h2>
+        <ul class="[ flow1/3 ]">
+          {% for exercise in exercises %}
+          <li><a href="/{{ locale }}/exercises/{{ exercise.id }}">{{ exercise.id }}</a></li>
+          {% endfor %}
+        </ul>
+      </div>
+      {% endfor %}
+
+
+      <!-- {% for category in exercises %}
+      <div class="[ flow2 ]">
+        <h2 class="[ h-fancy ]">{{ category.name }}</h2>
+        <ul class="[ flow1/3 ]">
+          {% for exercise in category.exercises %}
+          <li><a href="/{{ locale }}/exercises/{{ exercise.id }}">{{ exercise.name }}</a></li>
+          {% endfor %}
+        </ul>
+      </div>
+      {% endfor %} -->
+    </div>
   </div>
 </main>
 {% include 'partials/footer.html' %}
