--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -11,13 +11,13 @@ description: The pain revolution is here. Our mission is to develop high-quality
   <div class="[ squeeze12 stack ] [ cx g4 ]">
     {% include 'partials/homeIntro.html' %}
     <div class="[ switcher11 ] [ g3 ]">
-      {% set posts = collections[locale + '_articles'] %}
+      {% set articles = collections[locale + '_articles'] %}
       <section class="[ flow2 ]">
         <h2 class="[ h-fancy ]">For clinicians</h2>
         <div class="[ flow1/3 ]">
           <h3>Articles</h3>
           <ul class="[ flow1/3 ]">
-            {% for entry in posts %}
+            {% for entry in articles %}
             {% if entry.data.audience == 'clinicians' %}
             <li><a href="{{ entry.url }}">{{ entry.data.title }}{% if entry.data.subtitle %}: {{ entry.data.subtitle }}{% endif %}</a>{% if entry.data.description %} - {{ entry.data.description }}{%endif %}</li>
             {% endif %}
@@ -36,7 +36,7 @@ description: The pain revolution is here. Our mission is to develop high-quality
         <div class="[ flow1/3 ]">
           <h3>Articles</h3>
           <ul class="[ flow1/3 ]">
-            {% for entry in posts %}
+            {% for entry in articles %}
             {% if entry.data.audience == 'patients' %}
             <li><a href="{{ entry.url }}">{{ entry.data.title }}{% if entry.data.subtitle %}: {{ entry.data.subtitle }}{% endif %}</a>{% if entry.data.description %} - {{ entry.data.description }}{%endif %}</li>
             {% endif %}
